--- a/_posts/2015-05-25-ipython-notebooks_gallery.html
+++ b/_posts/2015-05-25-ipython-notebooks_gallery.html
@@ -2,7 +2,7 @@
 title: IPython Notebook Gallery
 name: IPython Notebook Gallery
 permalink: /ipython-notebooks/gallery
-description: Gallery of IPython Notebooks.
+description: Get started with IPython notebooks with this set of examples. A collection of practical IPython notebooks for interactive graphing with Plotly, data science, technical computing, and more.
 layout: getstart
 language: python
 has_thumbnail: false
@@ -56,7 +56,7 @@ has_thumbnail: false
                   <h5 class="centered">matplotlib and Plotly</h5>
             </div>
           </div>
-      </a> 
+      </a>
       <a href="/python/offline/">
           <div class="alltutcol">
             <img class="thumbnail" alt="Plotly Offline for IPython notebook" src="{{site.staticurl}}/images/ipython-img/3 - ipython offline.png" >
@@ -72,8 +72,8 @@ has_thumbnail: false
                   <h5 class="centered">Colors and Plotly</h5>
             </div>
           </div>
-      </a>  -->    
-    </div>       
+      </a>  -->
+    </div>
 
       <h3 id="report-generation" class="even_margin"><a class="no_underline plot-blue" href="#report-generation">Report Generation</a></h3>
 
@@ -101,7 +101,7 @@ has_thumbnail: false
                     <h5 class="centered">Email Reports</h5>
               </div>
             </div>
-        </a>        
+        </a>
         <div class="three-column-clear"></div>
       </div>
 
@@ -115,7 +115,7 @@ has_thumbnail: false
                   <h5 class="centered">MySQL</h5>
             </div>
           </div>
-      </a>    
+      </a>
       <a href="/ipython-notebooks/amazon-redshift/">
           <div class="alltutcol">
             <img class="thumbnail" alt="Plotting Data from Redshift" src="{{site.staticurl}}/images/ipython-img/9 - ipython redshift.png" >
@@ -189,7 +189,7 @@ has_thumbnail: false
                   <h5 class="centered">Bicycle Control Design</h5>
             </div>
           </div>
-      </a>     
+      </a>
       <a href="http://gvallver.perso.univ-pau.fr/notebook/bandDiagram.html">
           <div class="alltutcol">
             <img class="thumbnail" alt="Plotting density of states with Plotly and pymatgen" src="{{site.staticurl}}/images/ipython-img/25 - ipython bandDiagram.png" >
@@ -197,7 +197,7 @@ has_thumbnail: false
                   <h5 class="centered">Plotting Density of States with Plotly and Pymatgen</h5>
             </div>
           </div>
-      </a>       
+      </a>
 
       <div class="three-column-clear"></div>
     </div>
