--- a/_posts/2015-05-25-ipython-notebooks_index.html
+++ b/_posts/2015-05-25-ipython-notebooks_index.html
@@ -1,8 +1,8 @@
 ---
-title: Python for IPython Notebooks | Examples | Plotly
+title: IPython Notebook | Plotly
 name: Plotly for IPython Notebooks
 permalink: /ipython-notebooks/
-description: Using IPython Notebooks with Plotly.
+description: Get started with IPython notebooks and Plotly for inline interactive graphing.
 layout: getstart
 language: python
 has_thumbnail: false
