--- a/_posts/2015-07-19-pandas.html
+++ b/_posts/2015-07-19-pandas.html
@@ -1,8 +1,7 @@
 ---
-title: Pandas Graphing Library, Plotly
+title: Pandas Graphing Library | Plotly
 permalink: /pandas/
-description: "Plotly's Pandas graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts"
-layout: langindex
+description: Use Pandas with Plotly's Python package to make interactive graphs directly from data frames. Generate line charts, bar charts, histograms, box plots, and more.
 language: pandas
 ---
 {% include ad-text.html %}
