fix two urls that haven't been migrated yet

--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -15,8 +15,8 @@ redirect_from: /javascript-graphing-library/
 
 <div class="row centered btnrow">
 	<a href="https://plot.ly/javascript/getting-started/" class="button no_underline">Getting Started</a>
-	<a href="https://plot.ly/javascript/reference/" class="button no_underline">Reference</a>
-	<a href="https://plot.ly/javascript/showcase/" class="button no_underline">Showcase</a>
+	<a href="https://plot.ly/javascript-graphing-library/reference/" class="button no_underline">Reference</a>
+	<a href="https://plot.ly/javascript-graphing-library/showcase/" class="button no_underline">Showcase</a>
 	<a href="https://plot.ly/javascript/plotlyjs-function-reference/" class="button no_underline">Plotly.js Functions</a>
 </div>
 
