Header Simplification - now only one
No splash page header. only one throughout the api pages

--- a/_posts/2015-07-26-index.html
+++ b/_posts/2015-07-26-index.html
@@ -32,7 +32,7 @@ permalink: /api/
 
 	</head>
   <body>
-	{% include first-header.html %}
+	{% include header.html %}
 
 
 	<div class="api-splash row" id="herobanner">
