Adding links to plotlyFinance repo and code

--- a/_posts/plotly_js/ohlc/2015-08-15-simple-example-with-datetime-object.html
+++ b/_posts/plotly_js/ohlc/2015-08-15-simple-example-with-datetime-object.html
@@ -1,5 +1,5 @@
 ---
-name: Simple OHLC Examples
+name: Simple OHLC Example
 plot_url: https://plot.ly/~PlotBot/543/
 language: plotly_js
 suite: ohlc
