--- a/_posts/plotly_js/candlestick-charts/2015-08-15-candlestick_index.html
+++ b/_posts/plotly_js/candlestick-charts/2015-08-15-candlestick_index.html
@@ -12,9 +12,16 @@ display_as: chart_type
 order: 17
 ---
 
-<h5 class="centered">
-  Please note that the inclusion of the PlotlyFinance javascript library is necessary when making candlestick charts.
-</h5>
+<div class="tipbox row">
+
+  <h4 class="centered">
+    Please note that the inclusion of the Plotly Finance javascript library is necessary when making candlestick charts.
+  </h4>
+  <a class="centered" href="https://github.com/etpinard/plotlyjs-finance">Click here to view the PlotlyFinance repository.</a><br>
+  <a class="centered" href="https://raw.githubusercontent.com/etpinard/plotlyjs-finance/master/plotlyjs-finance.js">Click here to view the PlotlyFinance source code.</a>
+
+
+</div>
 
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","candlestick" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
