--- a/_posts/plotly_js/ohlc/2015-08-15-ohlc_index.html
+++ b/_posts/plotly_js/ohlc/2015-08-15-ohlc_index.html
@@ -11,10 +11,13 @@ has_thumbnail: true
 display_as: chart_type
 order: 18
 ---
-
-<h5 class="centered">
-  Please note that the inclusion of the PlotlyFinance javascript library is necessary when making OHLC charts.
-</h5>
+<div class="tipbox row">
+  <h4 class="centered">
+    Please note that the inclusion of the Plotly Finance javascript library is necessary when making OHLC charts.
+  </h4>
+  <a class="centered" href="https://github.com/etpinard/plotlyjs-finance">Click here to view the PlotlyFinance repository.</a><br>
+  <a class="centered" href="https://raw.githubusercontent.com/etpinard/plotlyjs-finance/master/plotlyjs-finance.js">Click here to view the PlotlyFinance source code.</a>
+</div>
 
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","ohlc" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
