--- a/_posts/2015-04-05-ggplot2-index.html
+++ b/_posts/2015-04-05-ggplot2-index.html
@@ -1,7 +1,7 @@
 ---
-title: Online ggplot2 figures | Plotly
+title: ggplot2 | plotly
 permalink: /ggplot2/
-description: Publish interactive ggplot2 figures to the web with one line of code! Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
+description: ggplot2 is a graphing library for R. Use ggplot2 with Plotly to create interactive, online ggplot2 charts with D3.js.
 layout: langindex
 language: ggplot2
 ---
