--- a/_posts/2015-04-05-matlab-index.html
+++ b/_posts/2015-04-05-matlab-index.html
@@ -1,53 +1,60 @@
 ---
-title: MATLAB Graphing Library | Plotly
+title: MATLAB Online
 permalink: /matlab/
-description: Plotly's MATLAB graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
+description: MATLAB Online is a MATLAB toolbox by Plotly for creating interactive MATLAB plots online. MATLAB Online uses Plotly's native web-based scientific graphing library.
 layout: langindex
 language: matlab
 ---
 {% include ad-text.html %}
 
-<h1 class="centered">Plotly MATLAB Library</h1>
-<h3 class="centered">Publish your MATLAB figures to the web with one line!</h3>
+<h1 class="centered">MATLAB Online Graphing Toolbox</h1>
+<h4 class="centered">by plotly</h4>
 
     <div class="section">
         <div class="row auto-eg-padding">
 			<div class="row">
-				<div class="six columns">
+				<div class="twelve columns">
+					<h6>Plotly brings interactive, online graphing to your MATLAB console.</h6>
 					<div class="z-depth-1">
-						<pre><code >
-fig = figure;
-
-% create your mesh grid
-[X,Y] = meshgrid(-8:.5:8);
+						<pre><code>[X,Y] = meshgrid(-8:.5:8);
 R = sqrt(X.^2 + Y.^2) + eps;
 Z = sin(R)./R;
-
-% create your 3D surface
 surf(Z);
 
-
-%--Graph the MATLAB figure online in Plotly!--%
-p = fig2plotly(fig);
-
-
-						</code></pre>
-					</div>
-				</div>
-				<div class="six columns">
-					<div class="border">
-					<iframe id="igraph" scrolling="no" margin="none" padding="none" height="401" src="https://plot.ly/~matlab_user_guide/952.embed" width="100%">
-                </iframe>
-
-
+fig2plotly(fig); % generate a web-based version of the MATLAB figure</code></pre>
 					</div>
 				</div>
 			</div>
+			<div class="row">
+				<div class="twelve columns">
+					<div class="border">
+					<iframe scrolling="no" margin="none" padding="none" height="800" src="https://plot.ly/~PlotBot/666.embed?autosize=true" width="100%"></iframe>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<h6>
+					Plotly's MATLAB graphs are interactive in the web browser. Hover over values, scroll to zoom, click-and-drag to rotate and pan. Since Plotly graphs are built with native web technologies javascript, SVG, d3.js, and webgl, no plugins or downloads are required.
+				</h6>
+
+				<div class="z-depth-1">
+					<pre><code>[X,Y,Z] = peaks;
+contour(X,Y,Z,20);
+fig2plotly();</code></pre>
+				</div>
+
+				<iframe src="https://plot.ly/~chris/16180.embed" width="100%" height="600px"></iframe>
+
+				<h6>
+					MATLAB Online graphs are created with HTML and Javascript. You can generate and serve this HTML and JavaScript with the <a href="https://plot.ly/matlab/offline">self-hosted desktop MATLAB Online toolbox</a> or you can save and share your MATLAB Online figures with <a href="https://plot.ly/plans">Plotly's cloud service</a>.
+				</h6>
+
+				<h6>
+					Use Plotly with MATLAB to share your figures with non-MATLAB users, to create <a href="https://plot.ly/matlab/dashboards">web-based MATLAB dashboards</a>, as the visualization toolbox in MATLAB web applications, or just for <a href="https://plot.ly/matlab/static-image-export/">publication quality vector image export</a>.
+				</h6>
+			</div>
         </div>
     </div>
-
-
-
 
 	<div class="row centered btnrow">
 		<a href="/matlab/getting-started/" class="button no_underline">Getting Started</a>
