--- a/_posts/2015-07-19-pandas.html
+++ b/_posts/2015-07-19-pandas.html
@@ -3,6 +3,7 @@ title: Pandas Graphing Library | Plotly
 permalink: /pandas/
 description: Use Pandas with Plotly's Python package to make interactive graphs directly from data frames. Generate line charts, bar charts, histograms, box plots, and more.
 language: pandas
+layout: langindex
 ---
 {% include ad-text.html %}
 
