redirect new js posts

--- a/_posts/plotly_js/3d-cluster/2015-08-10-3d_point_cluster_index.html
+++ b/_posts/plotly_js/3d-cluster/2015-08-10-3d_point_cluster_index.html
@@ -1,7 +1,7 @@
 ---
 title: 3D Cluster Graph | Examples | Plotly
 name: 3D Cluster Graph
-permalink: javascript-graphing-library/3d-point-clustering/
+permalink: javascript/3d-point-clustering/
 description: How to make a 3D Cluster Graph in JavaScript.
 layout: base
 thumbnail: /images/3d-clusters.png
@@ -9,6 +9,7 @@ language: plotly_js
 page_type: example_index
 has_thumbnail: true
 display_as: 3d_charts
+redirect_from: javascript-graphing-library/3d-point-clustering/
 ---
 
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","3d-cluster" | sort: "order" %}
