--- a/_posts/plotly_js/ajax-call/2015-08-10-ajax_call_plotly_js_index.html
+++ b/_posts/plotly_js/ajax-call/2015-08-10-ajax_call_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Javascript Graphing Library Ajax Call | Examples | Plotly
 name: Read CSV Data from an Ajax Call
-permalink: javascript-graphing-library/ajax-call/
+permalink: javascript/ajax-call/
 description: How to make Ajax calls in javascript for Plotlyjs.
 layout: base
 thumbnail: /images/line-plots.png
@@ -9,6 +9,7 @@ language: plotly_js
 page_type: example_index
 has_thumbnail: false
 display_as: layout_opt
+redirect_from: javascript-graphing-library/ajax-call/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","ajax" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
