--- a/_posts/plotly_js/remove-trace/2015-08-15-remove_trace_index.html
+++ b/_posts/plotly_js/remove-trace/2015-08-15-remove_trace_index.html
@@ -1,7 +1,7 @@
 ---
 title: Plotly.js Remove Trace from Plot | Examples | Plotly
 name: Remove Trace from Plot
-permalink: javascript-graphing-library/remove-trace/
+permalink: javascript/remove-trace/
 description: How to remove a trace from a plot in JavaScript.
 layout: base
 thumbnail: /images/remove-trace.png
@@ -9,6 +9,7 @@ language: plotly_js
 page_type: example_index
 has_thumbnail: true
 display_as: chart_events
+redirect_from: javascript-graphing-library/remove-trace/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","remove-trace" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
