--- a/_posts/plotly_js/ribbon-plots/2015-08-12-ribbon-plot-index.html
+++ b/_posts/plotly_js/ribbon-plots/2015-08-12-ribbon-plot-index.html
@@ -1,7 +1,7 @@
 ---
 title: Ribbon Plots | Examples | Plotly
 name: Ribbon Plots
-permalink: javascript-graphing-library/ribbon-plots/
+permalink: javascript/ribbon-plots/
 description: How to make a ribbon plot in JavaScript.
 layout: base
 thumbnail: /images/ribbon-plot.png
@@ -9,6 +9,7 @@ language: plotly_js
 page_type: example_index
 has_thumbnail: true
 display_as: 3d_charts
+redirect_from: javascript-graphing-library/ribbon-plots/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","ribbon-plot" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
