--- a/javascript/index.html
+++ b/javascript/index.html
@@ -903,7 +903,7 @@
 		<div class="row">
 		
 			
-				<a href="/javascript-graphing-library/remove-trace/">
+				<a href="/javascript/remove-trace/">
 					<div class="alltutcol">
 						<img class="thumbnail" alt="Remove Trace from Plot" src="https://plot.ly/gh-pages/documentation/static//images/remove-trace.png" >
 						<div class="titlecenter">
@@ -1286,7 +1286,7 @@
 
 
 
-<a href="/javascript-graphing-library/ribbon-plots/">
+<a href="/javascript/ribbon-plots/">
 <div class="alltutcol">
 <img class="thumbnail" alt="Ribbon Plots" src="https://plot.ly/gh-pages/documentation/static//images/ribbon-plot.png" >
 <div class="titlecenter">
@@ -1299,7 +1299,7 @@
 
 
 
-<a href="/javascript-graphing-library/3d-point-clustering/">
+<a href="/javascript/3d-point-clustering/">
 <div class="alltutcol">
 <img class="thumbnail" alt="3D Cluster Graph" src="https://plot.ly/gh-pages/documentation/static//images/3d-clusters.png" >
 <div class="titlecenter">
@@ -1425,7 +1425,7 @@
 
 
 	
-	<li><a href="/javascript-graphing-library/ajax-call/">Read CSV Data from an Ajax Call</a></li>
+	<li><a href="/javascript/ajax-call/">Read CSV Data from an Ajax Call</a></li>
 	
 
 
