--- a/r/offline/index.html
+++ b/r/offline/index.html
@@ -325,7 +325,7 @@ If, for some reason, you can't move the zip file to that location, tell R to loo
 
 unzip("~/Downloads/plotly-offline.zip", exdir = "~/Downloads/")
 
-Sys.setenv("plotly_offline", "~/Downloads/")
+Sys.setenv("plotly_offline"="~/Downloads/")
 </code></pre>
 
 <p>3 - Now, you are ready to start using Plotly offline! All you need to do is wrap your <code>plot_ly</code> or <code>ggplotly</code> calls in <code>offline</code></p>
