* Merged Ad-text and banner-image include * removed h1 negative margin * Moved ad-text to layout instead of pages

--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -7,9 +7,7 @@ language: plotly_js
 redirect_from: /javascript-graphing-library/
 ---
 
-{% include ad-text.html %}
-
-<h1 class="centered" style="margin-top:-200px;">Plotly.js</h1>
+<h1 class="centered">Plotly.js</h1>
 
 <h3 class="centered">Plotly JavaScript Graphing Library</h3>
 
