--- a/_posts/2015-07-19-pandas.html
+++ b/_posts/2015-07-19-pandas.html
@@ -5,9 +5,8 @@ description: Use Pandas with Plotly's Python package to make interactive graphs 
 language: pandas
 layout: langindex
 ---
-{% include ad-text.html %}
 
-<h1 class="centered shiftup">Plotly Python Library for Pandas</h1>
+<h1 class="centered">Plotly Python Library for Pandas</h1>
 	<div class="row centered btnrow">
 		<a href="/python/getting-started/" class="button no_underline">Getting Started</a>
 		<a href="/ipython-notebooks/cufflinks/" class="button no_underline">Cufflinks User Guide</a>
