--- a/_posts/2015-04-05-python-index.html
+++ b/_posts/2015-04-05-python-index.html
@@ -5,14 +5,13 @@ description: Plotly's Python graphing library makes interactive, publication-qua
 layout: langindex
 language: python
 ---
-{% include ad-text.html %}
 
-<h1 class="centered shiftup">Plotly Python Library</h1>
+<h1 class="centered">Plotly Python Library</h1>
 	<div class="row centered btnrow">
 		<a href="/python/getting-started/" class="button no_underline">Getting Started</a>
 		<a href="/python/user-guide/" class="button no_underline">User Guide</a>
 		<a href="/ipython-notebooks/" class="button no_underline">IPython Notebooks</a>
-		<a href="/pandas/" class="button no_underline">Pandas</a>		
+		<a href="/pandas/" class="button no_underline">Pandas</a>
 		<a href="https://plot.ly/python/reference/" class="button no_underline">Reference</a>
 	</div>
 
