--- a/_posts/plotly_js/getting-started/2015-07-21-plotlyjs-getting-started.html
+++ b/_posts/plotly_js/getting-started/2015-07-21-plotlyjs-getting-started.html
@@ -8,7 +8,7 @@ language: plotly_js
 redirect_from: javascript-graphing-library/getting-started/
 ---
 
-<h1 style="margin-top:-200px;">Getting started: Plotly.js</h1>
+<h1>Getting started: Plotly.js</h1>
 
     <section class="section">
         <h2>Download</h2>
