set thumnail to true

--- a/_posts/pandas/finance/2015-06-30-ohlc-charts.html
+++ b/_posts/pandas/finance/2015-06-30-ohlc-charts.html
@@ -1,11 +1,11 @@
 ---
-permalink: python/ohlc-charts
+permalink: pandas/ohlc-charts
 description: How to make interactive OHLC charts in Python with Plotly. Six examples of OHLC charts with Pandas, time series, and yahoo finance data.
 name: OHLC Charts
-has_thumbnail: false
+has_thumbnail: true
 thumbnail: /images/static-image
 layout: user-guide
-language: python
+language: pandas
 title: Python OHLC Charts | plotly
 display_as: chart_type
 has_thumbnail: true
