--- a/_posts/pandas/finance/2015-06-30-candlestick-charts.html
+++ b/_posts/pandas/finance/2015-06-30-candlestick-charts.html
@@ -1,11 +1,11 @@
 ---
-permalink: python/candlestick-charts
+permalink: pandas/candlestick-charts
 description: How to make interactive candlestick charts in Python with Plotly. Six examples of candlestick charts with Pandas, time series, and yahoo finance data.
 name: Candlestick Charts
-has_thumbnail: false
+has_thumbnail: true
 thumbnail: /images/static-image
 layout: user-guide
-language: python
+language: pandas
 title: Python Candlestick Charts | plotly
 display_as: chart_type
 has_thumbnail: true
