explain ggplot2 more

--- a/_posts/2015-04-05-ggplot2-index.html
+++ b/_posts/2015-04-05-ggplot2-index.html
@@ -7,7 +7,6 @@ language: ggplot2
 ---
 
 <h1 class="centered">Plotly ggplot2 Library</h1>
-<h3 class="centered">Publish your ggplot2 figures to the web with one line!</h3>
     <div class="section">
         <div class="row auto-eg-padding">
 			<div class="row">
@@ -32,6 +31,18 @@ ggplotly()</code></pre>
 				</div>
 				<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1145.embed" width="800" frameBorder="0"></iframe>
 			</div>
+
+			<div>
+				<p>
+					<code>ggplotly</code> works by <a href="https://plot.ly/ggplot2/user-guide">serializing ggplot2 figures into plotly's universal graph JSON</a>. See the <a href="http://ropensci.github.io/plotly-test-table/tables/0e3d5ca144d27d8416318824c1b6ec1421a51045/index.html">ggplot2 → plotly test tables</a> for current ggplot2 conversion coverage. Submit issues or contribute on <a href="https://github.com/ropensci/plotly/issues">rOpenSci</a>.
+				</p>
+			</div>
+
+			<div>
+				<p>
+					Plotly's ggplot2 graphs are hosted online in <a href="https://plot.ly/plans">your plotly account</a> or <a href="https://plot.ly/r/offline">drawn locally in RStudio</a>. They can be embedded in <a href="https://plot.ly/r/dashboards">HTML pages</a>, <a href="https://plot.ly/r/knitr">Knitr documents</a>, or <a href="https://plot.ly/r/shiny-tutorial">Shiny apps</a>. You don't need to use ggplot2 to use Plotly with R, you can also use Plotly's native <a href="https://plot.ly/r/">R graphing library</a>.
+				</p>
+			</div>
         </div>
     </div>
 
@@ -41,9 +52,7 @@ ggplotly()</code></pre>
 		<a href="https://github.com/ropensci/plotly/" class="button no_underline">Source Code</a>
 	</div>
 
-	<p class='centered'>Submit an issue on <a href="https://github.com/ropensci/plotly/issues">rOpenSci</a></p>
 
-	<p class='centered'>See the <a href="http://ropensci.github.io/plotly-test-table/tables/0e3d5ca144d27d8416318824c1b6ec1421a51045/index.html">ggplot2 → plotly test tables</a> for current ggplot2 conversion coverage.</p>
 
 	<h2>Documentation Examples</h2>
 		{% assign languagelistimg = site.posts | where:"page_type":"example_index" | where:"language","ggplot2"  | where:"has_thumbnail",true % | sort: "order" %}
