--- a/_posts/2015-08-08-ruby-index.html
+++ b/_posts/2015-08-08-ruby-index.html
@@ -9,6 +9,7 @@ language: ruby
 <h1 class="centered">Plotly Ruby Library</h1>
 	<div class="row centered btnrow">
 		<a href="/ruby/getting-started/" class="button no_underline">Getting Started</a>
+		<a href="/ipython-notebooks/ruby-kernel/" class="button no_underline">Jupyter Notebooks</a>
 		<!-- <a href="https://plot.ly/ruby/reference/" class="button no_underline">Reference</a> -->
 	</div>
 	<!-- <div class="tipbox row">
