Update and rename _posts/ggplot2/geom_point/2015-08-17-map.html to _posts/ggplot2/hover/2015-08-17-map.html

--- a/_posts/ggplot2/hover/2015-08-17-map.html
+++ b/_posts/ggplot2/hover/2015-08-17-map.html
@@ -2,8 +2,8 @@
 name: making maps with R
 plot_url: https://plot.ly/~MattSundquist/19399/lat-vs-long/
 language: ggplot2
-suite: geom_point
-order: 12
+suite: hover-events
+order: 1
 sitemap: false
 ---
 # Learn about API authentication here: https://plot.ly/ggplot2/getting-started
