--- a/_posts/pandas/pie/2015-06-30-pie-charts.html
+++ b/_posts/pandas/pie/2015-06-30-pie-charts.html
@@ -2,12 +2,12 @@
 permalink: pandas/pie-charts
 description: How to make interactive Pie charts in Cufflinks with Plotly. Two examples of Pie charts with Pandas and Cufflinks.
 name: Pie Charts
+has_thumbnail: true
+thumbnail: /images/pie-chart.png
 layout: user-guide
 language: pandas
 title: Pandas Pie Charts | plotly
 display_as: chart_type
-has_thumbnail: true
-thumbnail: /images/pie-chart.png
 page_type: example_index
 order: 22
 ---
@@ -79,28 +79,28 @@ order: 22
   <tbody>
     <tr>
       <th>0</th>
-      <td>GVP.PD</td>
-      <td>27</td>
+      <td>ZDS.FY</td>
+      <td>70</td>
     </tr>
     <tr>
       <th>1</th>
-      <td>NOR.NU</td>
-      <td>2</td>
+      <td>RPF.JV</td>
+      <td>20</td>
     </tr>
     <tr>
       <th>2</th>
-      <td>RIF.GN</td>
-      <td>41</td>
+      <td>ACC.UM</td>
+      <td>17</td>
     </tr>
     <tr>
       <th>3</th>
-      <td>LXH.BC</td>
-      <td>90</td>
+      <td>NCY.LC</td>
+      <td>76</td>
     </tr>
     <tr>
       <th>4</th>
-      <td>FHT.VE</td>
-      <td>32</td>
+      <td>EIK.JE</td>
+      <td>99</td>
     </tr>
   </tbody>
 </table>
@@ -143,7 +143,7 @@ order: 22
 <div class="output_area"><div class="prompt output_prompt">Out[3]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/6106.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/6145.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -168,4 +168,33 @@ order: 22
 
 </div>
 </div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[4]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span class="n">pie</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">kind</span><span class="o">=</span><span class="s">&#39;pie&#39;</span><span class="p">,</span><span class="n">labels</span><span class="o">=</span><span class="s">&#39;labels&#39;</span><span class="p">,</span><span class="n">values</span><span class="o">=</span><span class="s">&#39;values&#39;</span><span class="p">,</span><span class="n">pull</span><span class="o">=.</span><span class="mi">2</span><span class="p">,</span><span class="n">hole</span><span class="o">=.</span><span class="mi">2</span><span class="p">,</span>
+          <span class="n">colorscale</span><span class="o">=</span><span class="s">&#39;blues&#39;</span><span class="p">,</span><span class="n">textposition</span><span class="o">=</span><span class="s">&#39;outside&#39;</span><span class="p">,</span><span class="n">textinfo</span><span class="o">=</span><span class="s">&#39;value+percent&#39;</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt output_prompt">Out[4]:</div>
+
+<div class="output_html rendered_html output_subarea output_execute_result">
+<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/6147.embed" height="525px" width="100%"></iframe>
+</div>
+
+</div>
+
+</div>
+</div>
+
 </div>{% endraw %}
