change pandas fin analysis png

--- a/_posts/pandas/finance/2015-08-21-financial_analysis_index.html
+++ b/_posts/pandas/finance/2015-08-21-financial_analysis_index.html
@@ -4,7 +4,7 @@ name: Financial Analysis Charts
 permalink: pandas/financial-analysis-charts/
 description: Financial analysis with pandas in Cufflinks. Examples of moving averages, bollinger bands, and relative strength indices.
 layout: base
-thumbnail: /images/bar.png
+thumbnail: /images/line_exclusive.png
 language: pandas
 page_type: example_index
 has_thumbnail: true
