ggplot2 user guide. finally!

--- a/_posts/2015-04-05-ggplot2-index.html
+++ b/_posts/2015-04-05-ggplot2-index.html
@@ -48,7 +48,7 @@ ggplotly()</code></pre>
 
 	<div class="row centered btnrow">
 		<a href="/ggplot2/getting-started/" class="button no_underline">Getting Started</a>
-		<a href="https://plot.ly/r/user-guide/" class="button no_underline">User Guide</a>
+		<a href="https://plot.ly/ggplot2/user-guide/" class="button no_underline">User Guide</a>
 		<a href="https://github.com/ropensci/plotly/" class="button no_underline">Source Code</a>
 	</div>
 
