@msund - typo here, these variables need to be on a single line

--- a/_posts/matplotlib/scatter_exclusive/2015-08-20-duplicate-points.html
+++ b/_posts/matplotlib/scatter_exclusive/2015-08-20-duplicate-points.html
@@ -3,8 +3,7 @@ name: scatter plot with duplicate points
 plot_url: https://plot.ly/~MattSundquist/19629
 language: matplotlib
 suite: scatter_exclusive
-description: Inspired by <a href="http://stackoverflow.com/questions/21081453/drawing-scatter-graph-using-matlibplot-pyplot-when-points-are-duplicate
-">Stack Overflow</a>.
+description: Inspired by <a href="http://stackoverflow.com/questions/21081453/drawing-scatter-graph-using-matlibplot-pyplot-when-points-are-duplicate">Stack Overflow</a>.
 order: 4
 sitemap: false
 ---
