aded plot_url instead of iplot

--- a/_posts/python/3d-parametric/2015-08-21-parametric-colorscale.html
+++ b/_posts/python/3d-parametric/2015-08-21-parametric-colorscale.html
@@ -53,4 +53,4 @@ layout = Layout(
     height=800
 )
 fig = Figure(data=data, layout=layout)
-py.iplot(fig, file_name='parametric-plot-viridis')
+plot_url = py.plot(fig, file_name='parametric-plot-viridis')
