--- a/_posts/python/3d-parametric/2015-08-21-parametric.html
+++ b/_posts/python/3d-parametric/2015-08-21-parametric.html
@@ -51,4 +51,4 @@ layout = Layout(
 )
 
 fig = Figure(data=data, layout=layout)
-py.iplot(fig, filename='Parametric_plot')
+plot_url = py.plot(fig, filename='Parametric_plot')
