--- a/_posts/python/3d-parametric/2015-08-21-parametric-index.html
+++ b/_posts/python/3d-parametric/2015-08-21-parametric-index.html
@@ -4,7 +4,7 @@ name: Parametric Plots
 permalink: python/3d-parametric-plots/
 description: How to make parametric plots in Python.
 layout: base
-thumbnail: /images/parametric-plot.png
+thumbnail: /images/parametric.png
 language: python
 page_type: example_index
 has_thumbnail: true
