--- a/_posts/plotly_js/callbacks-sliders/2015-04-09-sliders_index.html
+++ b/_posts/plotly_js/callbacks-sliders/2015-04-09-sliders_index.html
@@ -10,7 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_events
 order: 20
-redirect_from: https://plot.ly/javascript-graphing-library/range-slider/
+redirect_to: https://plot.ly/javascript-graphing-library/range-slider/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","slider-events" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
