--- a/_posts/plotly_js/streaming/2015-04-09-streaming_index.html
+++ b/_posts/plotly_js/streaming/2015-04-09-streaming_index.html
@@ -10,7 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_type
 order: 20
-redirect_from: https://plot.ly/javascript-graphing-library/streaming-data/
+redirect_to: https://plot.ly/javascript-graphing-library/streaming-data/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","basic_charts" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
