--- a/_posts/r/2015-08-10-plotly-offline.html
+++ b/_posts/r/2015-08-10-plotly-offline.html
@@ -74,9 +74,6 @@ offline(p)
 <img src="http://i.imgur.com/DgFP9oZ.gif">
 <br>
 
-<p>If you use plotly inside of <a href="https://plot.ly/r/shiny-tutorial/">plotly shiny apps</a> or reactive rmarkdown documents, your plotly graphs will be offline by default!</p>
-<br>
-
 <p>You can also construct your figure's entirely declaratively. This was the default syntax in the Plotly R library pre version 1.0.</p>
 
 <pre><code>x0 = rnorm(500)
@@ -90,6 +87,26 @@ layout &lt;- list(barmode = "overlay", title="overlaid histograms")
 fig &lt;- list(data=data, layout=layout)
 
 fig %>% offline</code></pre>
+
+<h3>Offline with <code>knitr</code></h3>
+<p>In knitr documents plotly graphs will be offline by default if the plotly offline libraries are installed.</p>
+
+<br><p>To convert an <b>RMarkdown document to HTML</b>, do:</p>
+<pre><code>knitr::knit_meta(clean=TRUE) # So that you can run this multiple times in a row. See https://github.com/ropensci/plotly/issues/271
+knitr::knit('plotly-offline.Rmd', 'plotly-offline.md')
+markdown::markdownToHTML('plotly-offline.md', 'plotly-offline.html')</code></pre>
+
+<br>
+<p>To print offline plots in a for loop, explicitly wrap the figure in <code>cat(knit_print.offline(offline(fig)))</code> and add <code>results="asis"</code> in the knitr block. Example:</p><br>
+<pre><code>```{r, results="asis"}
+for(i in 1:3) {
+    fig &lt;- list(data=list(list(x=rnorm(100), type="histogram")), layout=list(title=paste(c('plot', i, sep=" "))))
+    cat(knit_print.offline(fig %>% offline))
+}
+```</code></pre>
+
+<h3>Offline with Shiny</h3>
+<p>In Shiny apps plotly graphs will be offline by default if the plotly offline libraries are installed.</p>
 
 <div>
   <h3 id="More-About-Plotly-Offline">More about plotly offline<a class="anchor-link" href="#More-About-Plotly-Offline">¶</a></h3>
