--- a/_posts/pandas/financial_analysis/2015-06-30-moving_average.html
+++ b/_posts/pandas/financial_analysis/2015-06-30-moving_average.html
@@ -3,7 +3,7 @@ permalink: pandas/moving-average
 description: How to plot moving averages in Pandas and Cufflinks.
 name: Moving Averages
 has_thumbnail: true
-thumbnail: /images/line_exclusive.png
+thumbnail: /images/moving_average.png
 layout: user-guide
 language: pandas
 title: Moving Average in Pandas | plotly
