--- a/_posts/user_guide_python/2015-06-30-xlwings.html
+++ b/_posts/user_guide_python/2015-06-30-xlwings.html
@@ -14,7 +14,7 @@ language: python
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Online-Dashboards-with-Excel,-Python,-&amp;-Plotly">Online Dashboards with Excel, Python, &amp; Plotly<a class="anchor-link" href="#Online-Dashboards-with-Excel,-Python,-&amp;-Plotly">&#182;</a></h1>
+<h1 id="Online-Dashboards-with-Excel,-Python-&amp;-Plotly">Online Dashboards with Excel, Python &amp; Plotly<a class="anchor-link" href="#Online-Dashboards-with-Excel,-Python-&amp;-Plotly">&#182;</a></h1>
 </div>
 </div>
 </div>
@@ -32,7 +32,7 @@ language: python
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>This notebook was contributed by plotly user Otto Stegmaier.  You can follow Otto on Twitter <a href="https://twitter.com/otto_stegmaier?lang=en">@otto_stegmaier</a></p>
+<p>This notebook was contributed by <a href="https://plot.ly/~otto.stegmaier">Plotly user Otto Stegmaier</a>.  You can follow Otto on Twitter <a href="https://twitter.com/otto_stegmaier?lang=en">@otto_stegmaier</a> or <a href="https://github.com/ostegm">Github</a>.</p>
 
 </div>
 </div>
