fixed a typo in layout

--- a/_posts/2015-05-25-ipython-notebooks_gallery.html
+++ b/_posts/2015-05-25-ipython-notebooks_gallery.html
@@ -65,7 +65,7 @@ has_thumbnail: false
             </div>
           </div>
       </a>
-      < <a href="/ipython-notebooks/color-scales/">
+      <a href="/ipython-notebooks/color-scales/">
           <div class="alltutcol">
             <img class="thumbnail" alt="Working with colors in IPython notebook" src="{{site.staticurl}}/images/ipython-img/6 - ipython color lover.png" >
             <div class="titlecenter">
@@ -73,7 +73,7 @@ has_thumbnail: false
             </div>
           </div>
       </a>  
-    </div>
+      </div>
 
       <h3 id="report-generation" class="even_margin"><a class="no_underline plot-blue" href="#report-generation">Report Generation</a></h3>
 
