--- a/_posts/python/finance/2015-06-30-candlestick-charts.html
+++ b/_posts/python/finance/2015-06-30-candlestick-charts.html
@@ -8,6 +8,7 @@ layout: user-guide
 language: python
 title: Python Candlestick Charts | plotly
 display_as: chart_type
+has_thumbnail: true
 page_type: example_index
 order: 26
 ---
@@ -42,7 +43,7 @@ order: 26
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&apos;1.8.1&apos;</pre>
+<pre>&apos;1.8.3&apos;</pre>
 </div>
 
 </div>
@@ -87,7 +88,7 @@ order: 26
 <div class="output_area"><div class="prompt output_prompt">Out[2]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/5576.embed" height="525" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/5576.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -146,7 +147,7 @@ order: 26
 <div class="output_area"><div class="prompt output_prompt">Out[3]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/5634.embed" height="525" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/5634.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -211,7 +212,7 @@ order: 26
 <div class="output_area"><div class="prompt output_prompt">Out[4]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/5578.embed" height="525" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/5578.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -268,7 +269,65 @@ order: 26
 <div class="output_area"><div class="prompt output_prompt">Out[5]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/5642.embed" height="525" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/5642.embed" height="525px" width="100%"></iframe>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h5 id="Simple-Example-Adding-a-Trace-to-a-Candlestick-Chart">Simple Example Adding a Trace to a Candlestick Chart<a class="anchor-link" href="#Simple-Example-Adding-a-Trace-to-a-Candlestick-Chart">&#182;</a></h5>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[7]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
+<span class="kn">from</span> <span class="nn">plotly.tools</span> <span class="kn">import</span> <span class="n">FigureFactory</span> <span class="k">as</span> <span class="n">FF</span>
+<span class="kn">from</span> <span class="nn">plotly.graph_objs</span> <span class="kn">import</span> <span class="o">*</span>
+
+<span class="kn">from</span> <span class="nn">datetime</span> <span class="kn">import</span> <span class="n">datetime</span>
+
+<span class="kn">import</span> <span class="nn">pandas.io.data</span> <span class="kn">as</span> <span class="nn">web</span>
+
+<span class="c"># Create Candlestick</span>
+<span class="n">df</span> <span class="o">=</span> <span class="n">web</span><span class="o">.</span><span class="n">DataReader</span><span class="p">(</span><span class="s">&quot;aapl&quot;</span><span class="p">,</span> <span class="s">&#39;yahoo&#39;</span><span class="p">,</span> <span class="n">datetime</span><span class="p">(</span><span class="mi">2007</span><span class="p">,</span> <span class="mi">10</span><span class="p">,</span> <span class="mi">1</span><span class="p">),</span> <span class="n">datetime</span><span class="p">(</span><span class="mi">2008</span><span class="p">,</span> <span class="mi">3</span><span class="p">,</span> <span class="mi">31</span><span class="p">))</span>
+<span class="n">fig</span> <span class="o">=</span> <span class="n">FF</span><span class="o">.</span><span class="n">create_candlestick</span><span class="p">(</span><span class="n">df</span><span class="o">.</span><span class="n">Open</span><span class="p">,</span> <span class="n">df</span><span class="o">.</span><span class="n">High</span><span class="p">,</span> <span class="n">df</span><span class="o">.</span><span class="n">Low</span><span class="p">,</span> <span class="n">df</span><span class="o">.</span><span class="n">Close</span><span class="p">,</span> <span class="n">dates</span><span class="o">=</span><span class="n">df</span><span class="o">.</span><span class="n">index</span><span class="p">)</span>
+
+<span class="c"># Create Line of open values</span>
+<span class="n">add_line</span> <span class="o">=</span> <span class="n">Scatter</span><span class="p">(</span>
+    <span class="n">x</span><span class="o">=</span><span class="n">df</span><span class="o">.</span><span class="n">index</span><span class="p">,</span> 
+    <span class="n">y</span><span class="o">=</span><span class="n">df</span><span class="o">.</span><span class="n">Open</span><span class="p">,</span> 
+    <span class="n">name</span><span class="o">=</span> <span class="s">&#39;Open Vals&#39;</span><span class="p">,</span> 
+    <span class="n">line</span><span class="o">=</span><span class="n">Line</span><span class="p">(</span><span class="n">color</span><span class="o">=</span><span class="s">&#39;black&#39;</span><span class="p">)</span>
+    <span class="p">)</span>
+
+<span class="n">fig</span><span class="p">[</span><span class="s">&#39;data&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">extend</span><span class="p">([</span><span class="n">add_line</span><span class="p">])</span>
+<span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;candlestick_and_trace&#39;</span><span class="p">,</span> <span class="n">validate</span><span class="o">=</span><span class="bp">False</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt output_prompt">Out[7]:</div>
+
+<div class="output_html rendered_html output_subarea output_execute_result">
+<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/6204.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -288,7 +347,7 @@ order: 26
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[6]:</div>
+<div class="prompt input_prompt">In&nbsp;[8]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">help</span><span class="p">(</span><span class="n">FF</span><span class="o">.</span><span class="n">create_candlestick</span><span class="p">)</span>
