updated url's and title correction

--- a/_posts/user_guide_python/2015-06-30-xlwings.html
+++ b/_posts/user_guide_python/2015-06-30-xlwings.html
@@ -1,5 +1,5 @@
 ---
-permalink: /ipython-notebook/xlwings
+permalink: /ipython-notebooks/xlwings
 description: Online Dashboards with Excel, Python, & Plotly
 name: Building Interactive Graphs Using Plotly and xlwings
 has_thumbnail: false
@@ -14,7 +14,7 @@ language: python
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Online-Dashboards-with-Excel,-Python-&amp;-Plotly">Online Dashboards with Excel, Python &amp; Plotly<a class="anchor-link" href="#Online-Dashboards-with-Excel,-Python-&amp;-Plotly">&#182;</a></h1>
+<h1 id="Online-Dashboards-with-Excel,--Python-&amp;-Plotly">Online Dashboards with Excel, <br /> Python &amp; Plotly<a class="anchor-link" href="#Online-Dashboards-with-Excel,--Python-&amp;-Plotly">&#182;</a></h1>
 </div>
 </div>
 </div>
