updated url and title correction

--- a/_posts/user_guide_python/2015-06-30-meeg-and-eeg.html
+++ b/_posts/user_guide_python/2015-06-30-meeg-and-eeg.html
@@ -1,5 +1,5 @@
 ---
-permalink: /ipython-notebook/meeg-and-eeg-data-analysis
+permalink: /ipython-notebooks/meeg-and-eeg-data-analysis
 description: How to process EEG and MEG data using mne-python and Plotly
 name: Processing EEG and MEG data in Python using mne-python and Plotly
 has_thumbnail: false
@@ -14,7 +14,7 @@ language: python
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Processing-EEG-and-MEG-data-in-Python-using-mne-python">Processing EEG and MEG data in Python using mne-python<a class="anchor-link" href="#Processing-EEG-and-MEG-data-in-Python-using-mne-python">&#182;</a></h1><h4 id="Authors:">Authors:<a class="anchor-link" href="#Authors:">&#182;</a></h4><ul>
+<h1 id="Processing-EEG-and-MEG-Data-in-Python--Using-mne-python-and-Plotly">Processing EEG and MEG Data in Python <br /> Using mne-python and Plotly<a class="anchor-link" href="#Processing-EEG-and-MEG-Data-in-Python--Using-mne-python-and-Plotly">&#182;</a></h1><h4 id="Authors:">Authors:<a class="anchor-link" href="#Authors:">&#182;</a></h4><ul>
 <li>Mainak Jas (plotly figures)</li>
 <li>Alexandre Gramfort and Denis Engemann (original tutorial)</li>
 </ul>
@@ -11323,6 +11323,62 @@ u45sg/pmm2222XVkG9Q322yzza4j+/9wvCWylbAV0AAAAABJRU5ErkJggg==
 >
 </div>
 
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span class="kn">from</span> <span class="nn">IPython.display</span> <span class="kn">import</span> <span class="n">HTML</span><span class="p">,</span> <span class="n">display</span>
+
+<span class="n">display</span><span class="p">(</span><span class="n">HTML</span><span class="p">(</span><span class="s">&#39;&lt;link href=&quot;//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700&quot; rel=&quot;stylesheet&quot; type=&quot;text/css&quot; /&gt;&#39;</span><span class="p">))</span>
+<span class="n">display</span><span class="p">(</span><span class="n">HTML</span><span class="p">(</span><span class="s">&#39;&lt;link rel=&quot;stylesheet&quot; type=&quot;text/css&quot; href=&quot;https://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css&quot;&gt;&#39;</span><span class="p">))</span>
+
+<span class="kn">import</span> <span class="nn">publisher</span>
+<span class="n">publisher</span><span class="o">.</span><span class="n">publish</span><span class="p">(</span><span class="s">&#39;meeg-and-eeg&#39;</span><span class="p">,</span> <span class="s">&#39;/ipython-notebooks/meeg-and-eeg-data-analysis/&#39;</span><span class="p">,</span> 
+                  <span class="s">&#39;Processing EEG and MEG data in Python using mne-python and Plotly&#39;</span><span class="p">,</span> 
+                  <span class="s">&#39;How to process EEG and MEG data using mne-python and Plotly&#39;</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt"></div>
+
+<div class="output_html rendered_html output_subarea ">
+<link href="//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700" rel="stylesheet" type="text/css" />
+</div>
+
+</div>
+
+<div class="output_area"><div class="prompt"></div>
+
+<div class="output_html rendered_html output_subarea ">
+<link rel="stylesheet" type="text/css" href="https://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css">
+</div>
+
+</div>
+
+<div class="output_area"><div class="prompt"></div>
+<div class="output_subarea output_stream output_stderr output_text">
+<pre>/Users/nedaamin/Repos/venv27/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning: The &#96;IPython.nbconvert&#96; package has been deprecated. You should import from ipython_nbconvert instead.
+  &quot;You should import from ipython_nbconvert instead.&quot;, ShimWarning)
+/Users/nedaamin/Repos/venv27/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you &quot;Save&quot; this notebook before running this command? Remember to save, always save.
+  warnings.warn(&apos;Did you &quot;Save&quot; this notebook before running this command? &apos;
+/Users/nedaamin/Repos/venv27/lib/python2.7/site-packages/publisher/publisher.py:58: UserWarning: Your URL has more than 2 parts... are you sure?
+  warnings.warn(&apos;Your URL has more than 2 parts... are you sure?&apos;)
+</pre>
+</div>
 </div>
 
 </div>
