updated url and title correction

--- a/_posts/user_guide_python/2015-06-30-density-of-states .html
+++ b/_posts/user_guide_python/2015-06-30-density-of-states .html
@@ -1,5 +1,5 @@
 ---
-permalink: /ipython-notebook/density-of-states
+permalink: /ipython-notebooks/density-of-states
 description: Plotting Density of States with Plotly and Pymatgen
 name: plotting the density of states and the band diagram using pymatgen and plotly
 has_thumbnail: false
@@ -14,7 +14,7 @@ language: python
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Plotting-Density-of-States-with-Plotly-and-Pymatgen">Plotting Density of States with Plotly and Pymatgen<a class="anchor-link" href="#Plotting-Density-of-States-with-Plotly-and-Pymatgen">&#182;</a></h1>
+<h1 id="Plotting-Density-of-States-with---Plotly-and-Pymatgen">Plotting Density of States with <br />  Plotly and Pymatgen<a class="anchor-link" href="#Plotting-Density-of-States-with---Plotly-and-Pymatgen">&#182;</a></h1>
 </div>
 </div>
 </div>
