--- a/_posts/user_guide_python/2015-06-30-bezier.html
+++ b/_posts/user_guide_python/2015-06-30-bezier.html
@@ -14,7 +14,7 @@ language: python
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2>Plotting B&eacute;zier triangular patches with Python Plotly</h2>
+<h2>Plotting B&eacute;zier Triangular Patches with <br /> Python Plotly</h2>
 
 </div>
 </div>
