--- a/_posts/user_guide_python/2015-06-30-2d-kernel-density-distributions.html
+++ b/_posts/user_guide_python/2015-06-30-2d-kernel-density-distributions.html
@@ -1,5 +1,5 @@
 ---
-permalink: /ipython-notebook/2d-kernel-density-distributions
+permalink: /ipython-notebooks/2d-kernel-density-distributions
 description: 2D Kernel Density Distributions Using Plotly
 name: 2d Kernel Density Distributions
 has_thumbnail: false
@@ -14,7 +14,7 @@ language: python
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="2D-Kernel-Density-2D-Kernel-Density-Distributions-Using-Plotly-Using-Plotly">2D Kernel Density 2D Kernel Density Distributions Using Plotly Using Plotly<a class="anchor-link" href="#2D-Kernel-Density-2D-Kernel-Density-Distributions-Using-Plotly-Using-Plotly">&#182;</a></h2>
+<h2 id="2D-Kernel-Density-Distributions-Using-Plotly">2D Kernel Density Distributions Using Plotly<a class="anchor-link" href="#2D-Kernel-Density-Distributions-Using-Plotly">&#182;</a></h2>
 </div>
 </div>
 </div>
