updated url and suite

--- a/_posts/python/3d-subplot/2015-08-21-3d-subplots-index.html
+++ b/_posts/python/3d-subplot/2015-08-21-3d-subplots-index.html
@@ -1,7 +1,7 @@
 ---
 title: Python 3D  Subplots | Examples | Plotly
 name: 3D Subplots
-permalink: plotly/python/3d-subplots
+permalink: python/3d-subplots/
 description: How to make 3d subplots in Python.
 layout: base
 thumbnail: /images/3d-subplots.png
