--- a/_posts/python/3d-subplot/2015-08-21-3d-subplots.html
+++ b/_posts/python/3d-subplot/2015-08-21-3d-subplots.html
@@ -1,8 +1,8 @@
 ---
 name: 3D Subplots 
-plot_url: https://plot.ly/~neda/7362/subplots-with-different-colorscales/
+plot_url: https://plot.ly/~neda/7550/subplots-with-different-colorscales/
 language: python
-suite: 3d-subplot
+suite: 3d-subplots
 order: 0
 sitemap: false
 ---
