add ruby and php to api splash

--- a/_posts/2015-07-26-index.html
+++ b/_posts/2015-07-26-index.html
@@ -135,7 +135,8 @@ permalink: /api/
 					<a href="/javascript/"  class="button no_underline centeredsmall">JavaScript</a>
 					<a href="/python/" class="button no_underline centeredsmall">Python</a>
 					<a href="/nodejs/"  class="button no_underline centeredsmall">Node.js</a>
-					<a href="https://github.com/plotly/ruby-api"  class="button no_underline centeredsmall">Ruby</a>
+					<a href="https://plot.ly/ruby/getting-started"  class="button no_underline centeredsmall">Ruby</a>
+					<a href="https://plot.ly/php/getting-started"  class="button no_underline centeredsmall">PHP</a>
 					<a href="https://github.com/plotly/golang-api"  class="button no_underline centeredsmall">Go</a>
 					<a href="http://tahahachana.github.io/XPlot/"  class="button no_underline centeredsmall">F#</a>
 				</div>
