--- a/_posts/ruby/getting-started/2015-08-08-getting-started_ruby_index.html
+++ b/_posts/ruby/getting-started/2015-08-08-getting-started_ruby_index.html
@@ -41,7 +41,7 @@ language: ruby
             </p>
 
 			<br>
-            <!-- 
+            <!--
             <h6>
                 Special Instructions for <a class="no_underline" href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users
             </h6>
@@ -71,7 +71,7 @@ language: ruby
 
             <pre><code>
 
-data = { 
+data = {
     x: ['2013-10-04 22:23:00', '2013-11-04 22:23:00', '2013-12-04 22:23:00'],
     y: [1, 3, 6]
 }
@@ -88,13 +88,13 @@ args = {
 
 plotly.plot(data, args) do |response|
   puts response['url']
-end            
-            
+end
+
 </code></pre>
 
         </div>
     </section>
 
 <div class="row centered btnrow">
-	<a href="/nodejs/" class="button no_underline">view examples</a>
+	<a href="/ruby/" class="button no_underline">view examples</a>
 </div><br>
