add toc to reference

--- a/_posts/2015-08-19-plotly_js-reference.html
+++ b/_posts/2015-08-19-plotly_js-reference.html
@@ -3,14 +3,28 @@ permalink: /javascript/reference
 layout: langindex
 page_type: reference
 ---
-{% for trace in site.data.plotschema.traces %}
-    <a id="{{ trace[0] }}" href="#{{ trace[0] }}"><h3>{{ trace[0] }}</h3></a>
-    <div class="description">
-        {{ trace[1].description }}
+<div class="row">
+    <div class="four columns">
+        <div class="toc">
+            {% for trace in site.data.plotschema.traces %}
+                <a href="#{{trace[0]}}"><h4>{{trace[0]}}</h4></a>
+                {% assign attribute=trace[1].attributes %}
+                {% assign parentlink=trace[0] %}
+                {% include reference-toc.html %}
+                <hr>
+            {% endfor %}
+        </div>
     </div>
-    {% assign parentlink=trace[0] %}
-    {% assign attribute=trace[1].attributes %}
-    {% include reference-block.html %}
-{% endfor %}
 
-
+    <div class="eight columns">
+    {% for trace in site.data.plotschema.traces %}
+        <a id="{{ trace[0] }}" href="#{{ trace[0] }}"><h4>{{ trace[0] }}</h4></a>
+        <div class="description">
+            {{ trace[1].description }}
+        </div>
+        {% assign parentlink=trace[0] %}
+        {% assign attribute=trace[1].attributes %}
+        {% include reference-block.html %}
+    {% endfor %}
+    </div>
+</div>
