--- a/_posts/2015-08-19-plotly_js-reference.html
+++ b/_posts/2015-08-19-plotly_js-reference.html
@@ -4,19 +4,22 @@ layout: langindex
 page_type: reference
 ---
 <div class="row">
-    <div class="four columns">
+    <div class="three columns">
         <div class="toc">
             {% for trace in site.data.plotschema.traces %}
                 <a href="#{{trace[0]}}"><h4>{{trace[0]}}</h4></a>
                 {% assign attribute=trace[1].attributes %}
                 {% assign parentlink=trace[0] %}
-                {% include reference-toc.html %}
+                {% assign display_description = false %}
+                {% assign display_default = false %}
+                {% assign display_type = false %}
+                {% include reference-block.html %}
                 <hr>
             {% endfor %}
         </div>
     </div>
 
-    <div class="eight columns">
+    <div class="nine columns">
     {% for trace in site.data.plotschema.traces %}
         <a id="{{ trace[0] }}" href="#{{ trace[0] }}"><h4>{{ trace[0] }}</h4></a>
         <div class="description">
@@ -24,6 +27,8 @@ page_type: reference
         </div>
         {% assign parentlink=trace[0] %}
         {% assign attribute=trace[1].attributes %}
+        {% assign display_description = true %}
+        {% assign display_default = true %}
         {% include reference-block.html %}
     {% endfor %}
     </div>
