--- a/_posts/2015-08-19-plotly_js-reference.html
+++ b/_posts/2015-08-19-plotly_js-reference.html
@@ -4,7 +4,7 @@ layout: langindex
 page_type: reference
 ---
 <div class="row">
-    <div class="three columns">
+    <div class="four columns">
         <div class="toc">
             {% for trace in site.data.plotschema.traces %}
                 <a href="#{{trace[0]}}"><h4>{{trace[0]}}</h4></a>
@@ -13,13 +13,19 @@ page_type: reference
                 {% assign display_description = false %}
                 {% assign display_default = false %}
                 {% assign display_type = false %}
+                {% assign toc = true %}
                 {% include reference-block.html %}
                 <hr>
             {% endfor %}
+
+            <a href="#layout"><h4>layout</h4></a>
+            {% assign parentlink="layout" %}
+            {% assign attribute=site.data.plotschema.layout.layoutAttributes %}
+            {% include reference-block.html %}
         </div>
     </div>
 
-    <div class="nine columns">
+    <div class="eight columns">
     {% for trace in site.data.plotschema.traces %}
         <a id="{{ trace[0] }}" href="#{{ trace[0] }}"><h4>{{ trace[0] }}</h4></a>
         <div class="description">
@@ -29,7 +35,15 @@ page_type: reference
         {% assign attribute=trace[1].attributes %}
         {% assign display_description = true %}
         {% assign display_default = true %}
+        {% assign display_type = true %}
+        {% assign toc = false %}
         {% include reference-block.html %}
     {% endfor %}
+
+    <a id="layout" href="#layout"><h4>layout</h4></a>
+    {% assign parentlink="layout" %}
+    {% assign attribute=site.data.plotschema.layout.layoutAttributes %}
+    {% include reference-block.html %}
+
     </div>
 </div>
