--- a/_posts/2015-08-19-plotly_js-reference.html
+++ b/_posts/2015-08-19-plotly_js-reference.html
@@ -57,19 +57,19 @@ page_type: reference
             {% for trace in site.data.plotschema.traces %}
                 <a href="#{{trace[0]}}"><h4>{{trace[0]}}</h4></a>
                 {% assign attribute=trace[1].attributes %}
-                {% assign parentlink=trace[0] %}
+                {% assign localparentlink=trace[0] %}
                 {% assign display_description = false %}
                 {% assign display_default = false %}
                 {% assign display_type = false %}
                 {% assign toc = true %}
-                {% include reference-block.html %}
+                {% include reference-block.html parentlink=localparentlink %}
                 <hr>
             {% endfor %}
 
             <a href="#layout"><h4>layout</h4></a>
-            {% assign parentlink="layout" %}
+            {% assign localparentlink="layout" %}
             {% assign attribute=site.data.plotschema.layout.layoutAttributes %}
-            {% include reference-block.html %}
+            {% include reference-block.html parentlink=localparentlink %}
         </div>
     </div>
 
@@ -79,20 +79,20 @@ page_type: reference
         <div class="description">
             {{ trace[1].description }}
         </div>
-        {% assign parentlink=trace[0] %}
+        {% assign localparentlink=trace[0] %}
         {% assign attribute=trace[1].attributes %}
         {% assign display_description = true %}
         {% assign display_default = true %}
         {% assign display_type = true %}
         {% assign toc = false %}
-        {% include reference-block.html %}
+        {% include reference-block.html parentlink=localparentlink %}
         <hr>
     {% endfor %}
 
     <a id="layout" href="#layout"><h4>layout</h4></a>
-    {% assign parentlink="layout" %}
+    {% assign localparentlink="layout" %}
     {% assign attribute=site.data.plotschema.layout.layoutAttributes %}
-    {% include reference-block.html %}
+    {% include reference-block.html parentlink=localparentlink %}
 
     </div>
 </div>
