--- a/_posts/2015-08-19-plotly_js-reference.html
+++ b/_posts/2015-08-19-plotly_js-reference.html
@@ -16,32 +16,32 @@ page_type: reference
 <pre><code class="javascript js language-javascript language-js">{
     "data": [
         {
-            "type": "scatter",  // all "scatter" attributes: <a href="https://plot.ly/javascript/reference/#scatter">https://plot.ly/javascript/reference/#scatter</a>
-            "x": [1, 2, 3],     // more about "x": <a href="https://plot.ly/javascript/reference/#scatter-x">#scatter-x</a>
-            "y": [3, 1, 6],     // <a href="https://plot.ly/javascript/reference/#scatter-y">#scatter-y</a>
-            "marker": {         // marker is an object, here are valid marker keys: <a href="https://plot.ly/javascript/reference/#scatter-marker">#scatter-marker</a>
-                "color": "rgb(rgb(16, 32, 77)" // more about "marker.color": <a href="https://plot.ly/javascript/reference/#scatter-marker-color">#scatter-marker-color</a>
+            "type": "scatter",  // all "scatter" attributes: <a href="#scatter">https://plot.ly/javascript/reference/#scatter</a>
+            "x": [1, 2, 3],     // more about "x": <a href="#scatter-x">#scatter-x</a>
+            "y": [3, 1, 6],     // <a href="#scatter-y">#scatter-y</a>
+            "marker": {         // marker is an object, here are valid marker keys: <a href="#scatter-marker">#scatter-marker</a>
+                "color": "rgb(rgb(16, 32, 77)" // more about "marker.color": <a href="#scatter-marker-color">#scatter-marker-color</a>
             }
         },
         {
-            "type": "bar",      // all "bar" chart attributes: <a href="https://plot.ly/javascript/reference/#bar">#bar</a>
-            "x": [1, 2, 3],     // more about "x": <a href="https://plot.ly/javascript/reference/#bar-x">#bar-x</a>
-            "y": [3, 1, 6],     // <a href="https://plot.ly/javascript/reference/#bar-y">#bar-y</a>
-            "name": "bar chart example" // <a href="https://plot.ly/javascript/reference/#bar-name">#bar-name</a>
+            "type": "bar",      // all "bar" chart attributes: <a href="#bar">#bar</a>
+            "x": [1, 2, 3],     // more about "x": <a href="#bar-x">#bar-x</a>
+            "y": [3, 1, 6],     // <a href="#bar-y">#bar-y</a>
+            "name": "bar chart example" // <a href="#bar-name">#bar-name</a>
         },
     ],
-    "layout": {                     // all "layout" attributes: <a href="https://plot.ly/javascript/reference/#layout">#layout</a>
-        "title": "simple example",  // more about "layout.title": <a href="https://plot.ly/javascript/reference/#layout-title">#layout-title</a>
-        "xaxis": {                  // all "layout.xaxis" attributes: <a href="https://plot.ly/javascript/reference/#layout-xaxis">#layout-xaxis</a>
-            "title": "time"         // more about "layout.xaxis.title": <a href="https://plot.ly/javascript/reference/#layout-xaxis-title">#layout-xaxis-title</a>
+    "layout": {                     // all "layout" attributes: <a href="#layout">#layout</a>
+        "title": "simple example",  // more about "layout.title": <a href="#layout-title">#layout-title</a>
+        "xaxis": {                  // all "layout.xaxis" attributes: <a href="#layout-xaxis">#layout-xaxis</a>
+            "title": "time"         // more about "layout.xaxis.title": <a href="#layout-xaxis-title">#layout-xaxis-title</a>
         },
-        "annotations": [            // all "annotation" attributes: <a href="https://plot.ly/javascript/reference/#layout-annotations">#layout-annotations</a>
+        "annotations": [            // all "annotation" attributes: <a href="#layout-annotations">#layout-annotations</a>
             {
-                "text": "simple annotation",    // <a href="https://plot.ly/javascript/reference/#layout-annotations-text">#layout-annotations-text</a>
-                "x": 0,                         // <a href="https://plot.ly/javascript/reference/#layout-annotations-x">#layout-annotations-x</a>
-                "xref": "paper",                // <a href="https://plot.ly/javascript/reference/#layout-annotations-xref">#layout-annotations-xref</a>
-                "y": 0,                         // <a href="https://plot.ly/javascript/reference/#layout-annotations-y">#layout-annotations-y</a>
-                "yref": "paper"                 // <a href="https://plot.ly/javascript/reference/#layout-annotations-yref">#layout-annotations-yref</a>
+                "text": "simple annotation",    // <a href="#layout-annotations-text">#layout-annotations-text</a>
+                "x": 0,                         // <a href="#layout-annotations-x">#layout-annotations-x</a>
+                "xref": "paper",                // <a href="#layout-annotations-xref">#layout-annotations-xref</a>
+                "y": 0,                         // <a href="#layout-annotations-y">#layout-annotations-y</a>
+                "yref": "paper"                 // <a href="#layout-annotations-yref">#layout-annotations-yref</a>
             }
         ]
     }
