simplify variables with display_info

--- a/_posts/2015-08-19-plotly_js-reference.html
+++ b/_posts/2015-08-19-plotly_js-reference.html
@@ -58,9 +58,7 @@ page_type: reference
                 <a href="#{{trace[0]}}"><h4>{{trace[0]}}</h4></a>
                 {% assign attribute=trace[1].attributes %}
                 {% assign localparentlink=trace[0] %}
-                {% assign display_description = false %}
-                {% assign display_default = false %}
-                {% assign display_type = false %}
+                {% assign display_info = false %}
                 {% assign toc = true %}
                 {% include reference-block.html parentlink=localparentlink %}
                 <hr>
@@ -81,9 +79,7 @@ page_type: reference
         </div>
         {% assign localparentlink=trace[0] %}
         {% assign attribute=trace[1].attributes %}
-        {% assign display_description = true %}
-        {% assign display_default = true %}
-        {% assign display_type = true %}
+        {% assign display_info = true %}
         {% assign toc = false %}
         {% include reference-block.html parentlink=localparentlink %}
         <hr>
